Improve add dependencies quick fix to handle more cases